aligning view to fix menu scrolling

--- a/src/main/sass/screen.scss
+++ b/src/main/sass/screen.scss
@@ -175,8 +175,8 @@ code {
 	position: absolute;
 	overflow: auto;
 	margin: 0px;
-	padding: 15px 50px 15px 50px;
-	left: 21%;
+	padding: 15px 30px 15px 20px;
+	left: 24%;
 	right: 0px;
 	top: 0px;
 	bottom: 0px;
